--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "autoprefixer": "^10.1.0",
     "framer-motion": "^3.1.1",
     "moment-timezone": "^0.5.32",
     "next": "10.0.4",
+    "next-images": "^1.7.0",
     "next-seo": "^4.17.0",
     "postcss": "^8.2.1",
     "react": "17.0.1",
@@ -20,5 +22,8 @@
     "swr": "^0.3.11",
     "tailwindcss": "^2.0.2",
     "use-last-fm": "^0.2.11"
+  },
+  "devDependencies": {
+    "react-flagpack": "^0.1.1"
   }
 }
