--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "juststop",
+  "name": "home",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "autoprefixer": "^10.1.0",
-    "framer-motion": "^3.1.1",
-    "moment-timezone": "^0.5.32",
+    "framer-motion": "^4.1.9",
     "next": "10.0.4",
-    "next-images": "^1.7.0",
-    "next-seo": "^4.17.0",
-    "postcss": "^8.2.1",
+    "next-seo": "^4.24.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-skeleton-loader": "^1.0.4",
-    "swr": "^0.3.11",
-    "tailwindcss": "^2.0.2",
-    "use-lanyard": "^0.0.4"
+    "use-lanyard": "^0.0.5"
   },
   "devDependencies": {
-    "react-flagpack": "^0.1.1"
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "autoprefixer": "^10.1.0",
+    "postcss": "^8.2.1",
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.1.3"
   }
 }
