--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-skeleton-loader": "^1.0.4",
-    "use-lanyard": "^0.0.5"
+    "use-lanyard": "^0.0.5",
+    "use-listen-along": "^1.1.10"
   },
   "devDependencies": {
     "@types/node": "^14.14.16",
