--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-seo": "^4.24.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-image-palette": "^0.2.4",
     "react-skeleton-loader": "^1.0.4",
     "use-lanyard": "^0.0.5",
     "use-listen-along": "^1.3.1"
