--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "post:projects": "tsc lib/assets/project.ts --outDir ./posts && node --experimental-modules ./post/index.js",
+    "post:socials": "tsc lib/assets/social.ts --outDir ./posts && node --experimental-modules ./post/index.js"
   },
   "dependencies": {
     "ahooks": "^2.10.9",
-    "axios": "^0.21.2",
+    "axios": "^0.24.0",
     "framer-motion": "^4.1.9",
     "next": "11.1.1",
     "next-seo": "^4.24.0",
@@ -26,6 +29,10 @@
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "autoprefixer": "^10.1.0",
+    "clear": "^0.1.0",
+    "form-data": "^4.0.0",
+    "inquirer": "^8.2.0",
+    "ora": "^6.0.1",
     "postcss": "^8.2.1",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.3.5"
