--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "11.1.1",
     "next-seo": "^4.24.0",
     "react": "17.0.1",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.1",
     "react-feather": "^2.0.9",
     "react-image-palette": "^0.2.4",
