--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4.1.9",
     "next": "11.1.1",
     "next-seo": "^4.24.0",
+    "number-to-words": "^1.2.4",
     "react": "17.0.1",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.16",
+    "@types/number-to-words": "^1.2.1",
     "@types/react": "^17.0.0",
     "autoprefixer": "^10.1.0",
     "clear": "^0.1.0",
