--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "post:socials": "cd post && yarn post:socials"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.3",
     "ahooks": "^2.10.9",
     "axios": "^0.24.0",
     "framer-motion": "^4.1.9",
