--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "post:socials": "cd post && yarn post:socials"
   },
   "dependencies": {
+    "@types/gtag.js": "^0.0.12",
     "@vercel/analytics": "^0.1.3",
     "ahooks": "^2.10.9",
     "axios": "^0.24.0",
@@ -22,6 +23,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.1",
     "react-feather": "^2.0.9",
+    "react-ga": "^3.3.1",
     "react-image-palette": "^0.2.4",
     "use-lanyard": "^0.0.5",
     "use-listen-along": "^1.3.1"
