--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/components/canvas/View.jsx"  ],
   "exclude": [
     "node_modules"
   ]
