--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.0.1",
-    "@react-three/drei": "^9.77.3",
+    "@react-three/drei": "^9.75.0",
     "@react-three/fiber": "^8.13.3",
     "@react-three/postprocessing": "^2.15.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^10.16.4",
     "glsl-random": "^0.0.5",
     "maath": "^0.10.4",
     "next": "^13.4.7",
+    "r3f-perf": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
@@ -31,6 +33,7 @@
     "@next/bundle-analyzer": "^13.3.0",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
+    "@types/three": "^0.152.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.7",
