--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "ignore": ["**/unicornStudio.umd.js"],
   "extends": ["next", "prettier", "plugin:tailwindcss/recommended"],
   "rules": {
     "import/prefer-default-export": "off",
