--- a/package.json
+++ b/package.json
@@ -1,44 +1,26 @@
 {
-	"name": "home",
-	"version": "0.1.0",
-	"private": true,
-	"license": "MIT",
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"post:projects": "cd post && yarn post:projects",
-		"post:socials": "cd post && yarn post:socials"
-	},
-	"dependencies": {
-		"@types/gtag.js": "^0.0.12",
-		"@vercel/analytics": "^0.1.3",
-		"ahooks": "^2.10.9",
-		"axios": "^0.24.0",
-		"framer-motion": "^4.1.9",
-		"next": "11.1.1",
-		"next-seo": "^4.24.0",
-		"number-to-words": "^1.2.4",
-		"react": "17.0.1",
-		"react-device-detect": "^2.1.2",
-		"react-dom": "17.0.1",
-		"react-feather": "^2.0.9",
-		"react-ga": "^3.3.1",
-		"react-image-palette": "^0.2.4",
-		"use-lanyard": "^0.0.5",
-		"use-listen-along": "^1.3.1"
-	},
-	"devDependencies": {
-		"@types/node": "^14.14.16",
-		"@types/number-to-words": "^1.2.1",
-		"@types/react": "^17.0.0",
-		"autoprefixer": "^10.4.4",
-		"clear": "^0.1.0",
-		"form-data": "^4.0.0",
-		"inquirer": "^8.2.0",
-		"ora": "^6.0.1",
-		"postcss": "^8.4.12",
-		"tailwindcss": "^3.0.24",
-		"typescript": "^4.3.5"
-	}
+  "name": "house",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "motion": "^11.14.4",
+    "next": "15.1.0",
+    "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
