--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "motion": "^11.14.4",
     "next": "15.1.0",
     "react": "^19.0.0",
