--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "use-lanyard": "^1.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
